# mlwego

./: README.md  pyproject.toml
mlwego/: __init__.py
mlwego/agent/: controller.py  planner.py  tools.py
mlwego/evaluation/: evaluator.py  infer_task.py  metrics.py  splitter.py
mlwego/execution/: env_check.py  sandbox.py  timeouts.py
mlwego/llm/: ollama_client.py  token_budget.py
mlwego/llm/prompt_templates/: role.txt  system.txt
mlwego/search/: generator.py  policy.py  selector.py  solution_tree.py
mlwego/ui/: cli.py
mlwego/workspace/: file_ops.py  project_init.py  snapshot.py
scripts/: demo_titanic.py
tests/: test_file_ops.py  test_metrics.py  test_submission_validation.py
